# SlavaMelanko

./: .gitignore  README.md
blog/annual-summary/2022/: 2022.psd  2022_insta.psd  3-heaviest-objects-meme.psd  3-world-giving-index-2022.psd  4-meme-cmon-do-something.psd  4-net-p&l.psd  5-github.psd  5-meme-old-shit.psd  Thumbs.db
blog/annual-summary/2023/: 2023.psd
blog/annual-summary/2024/: 2024.psd
blog/annual-summary/2025/: 2025.psd
blog/cpp20/concepts/: code.txt
blog/cpp20/concepts/ps/: blog-cpp20-concepts.psd  no-signs.psd
blog/cpp20/coroutines/assets/: Books.psd
blog/cpp20/coroutines/code/: CMakeLists.txt  README.md  cmakegen.py
blog/cpp20/coroutines/code/cmake/: Conan.cmake
blog/cpp20/coroutines/code/include/: Awaitable.h  Awaiter.h  Coroutine.h  Promise.h  Task.h
blog/cpp20/coroutines/code/tests/: CMakeLists.txt  Task.cpp  TaskTest.cpp
blog/cpp20/coroutines/ps/: cpp20-coroutines.psd
blog/cpp20/modules/: code.cpp
blog/cpp20/modules/ps/: auto-return-type-1.psd  auto-return-type-2.psd  cat.psd  code.psd  cpp-project-structure.psd  cpp20-modules.psd  odr-violation.psd  speechless-meme-v2.psd  speechless-meme.psd  three-dragons-meme.psd  vs-enable-std-modules.psd  vs-install-std-modules.psd
blog/cpp20/ranges/: code.cpp
blog/data-visualization/: .gitignore  debt.csv  debts.ipynb
blog/honey.kh.ua/: 1-main-honeycomb.psd  1-one-more-img.psd  2-about-us-sloboda.psd  3-about-us-photos.psd  Thumbs.db  logo.psd  section-honeycomb.psd  sloboda-honeycomb.psd  test.psd
sns/linkedin/: banner-new.psd  banner.psd
(+20 files in other folders)
